@startuml Entity relations
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *_id : string <<generated>>
  --
  *email : text
  *password : text
  *firstName : text
  *lastName: text
  picture : text
  invitedBy: text <<FK>>
  --
  roles : string[]
  nReviews: number
  nBeenVoted: Number
  level: Number
  savedArticles: [<<FK>>]
  verified: boolean;
  loginAttempts: number;
  --
  reputation: number
}

entity "Reputation" as rep {
  *_id : string <<generated>>
  --
  *user : text <<FK>>
  *points: number
  *action: actionId
  *createdAt
  --
  referencedId: text <<FK>>
}

entity "SavedArticles" as saved {
  *_id : string <<generated>>
  --
  *author : text <<FK>>
  *articleId : text <<FK>>
}

entity "Invitation" as inv {
  *_id : string <<generated>>
  --
  *author : text <<FK>>
  *invitedEmail: text
  *createdAt: date
  *code: Number
  *isValid: Boolean
  --
  - TTL 48 hours
}

entity "Vote" as vote {
  *_id : string <<generated>>
  --
  *author : text <<FK>>
  *referencedId: text <<FK>>
  *type: {ARTICLE, CLAIM, REVIEW, USER}
  --
  ' *text: Text
  *rating: Number {-1,0,1}
  *createdAt: date
}

entity "Article" as article {
  *_id : text <<generated>>
  --
  *claims: [<<FK>>,...]
  *author : text <<FK>>
  *title: text
  *text : text
  *sourceUrl: text
  *sourceType : enum
  *lang : text
  *nNegativeVotes: Number
  *nPositiveVotes: Number
  *nSaved: Number
}

entity "Claim" as claim {
  *_id : text <<generated>>
  --
  *author: text <<FK>>
  *priority: number
  *articleId : text <<FK>>
  *articles: [<<FK>>,...]
  *text : text
  *nBeenVoted: Number
  *nPositiveVotes: number
  *nNegativeVotes: number
  *history: [{text,updatedAt,lang,author}]
  --
  *nViews: number
}

entity "Review" as review {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *claimId: text <<FK>>
  *articleId: text <<FK>>
  *text: text
  *vote: enum {pos, neg, neut, no_info}
  *links: [String]
  *nBeenVoted: Number
  *nPositiveVotes: number
  *nNegativeVotes: number
  *nNeutralVotes: number
}

entity "Review comment" as reviewComment {
  *_id : text <<generated>>
  --
  *author : text <<FK>>
  *reviewId: text <<FK>>
  *text: text
  *proofUrls: array [text] 
  *nBeenVoted: Number
}

entity "Report" as report {
  *_id : text <<generated>>
  --
  *author : text <<FK>>
  *reportedUser : text <<FK>>
  *text: text
  *isOpen: boolean
  *createdAt
}

entity "Refresh Token" as refresh {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *email: string;
  *refreshToken: string
  *expires: Date;
  *createdAt: Date
}

user ||..o{ article
user ||..o{ inv
user ||..o{ saved
user ||..o{ vote
user ||..o{ rep
user ||..|| report
user ||..|{ refresh
article }o..o{ claim
article ||..o{ saved
' article ||..o{ vote
user ||..o{ review
' user ||..o{ vote
claim ||..o{ review
claim }o..|| user
claim ||..o{ vote
review ||..o{ reviewComment
review ||..o{ vote
@enduml